# Multimidia

./: .gitignore  CMakeLists.txt  README.md  commands.txt
include/: Heap.hpp  Huffman.hpp
src/: Decoder.cpp  Encoder.cpp  Heap.cpp  Huffman.cpp  MSE.cpp
